@@ -15,6 +15,7 @@ NEWS
   * print error if X-LIGHTTPD-send-file cannot be done; reset header
     Content-Length for send-file. Patches by Stefan Buhler
   * prevent crash in certain php-fcgi configurations (#841)
+  * add IdleServers and Scoreboard directives in ?auto mode for mod_status (#1507)
 
 - 1.4.18 - 2007-09-09
 
